<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.student.health.MainActivity">

    <LinearLayout
        android:layout_width="344dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        android:weightSum="1"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView"
            style="@style/titleName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.14"
            android:text="健康管理小幫手" />

        <Button
            android:id="@+id/btns1"
            style="@style/buttonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.12"
            android:onClick="btns1"
            android:text="@string/button1" />

        <Button
            android:id="@+id/btns2"
            style="@style/buttonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.12"
            android:onClick="btns2"
            android:text="@string/button2" />

        <Button
            android:id="@+id/btn1"
            style="@style/buttonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.12"
            android:onClick="btn1"
            android:text="@string/button3" />

        <Button
            android:id="@+id/btn2"
            style="@style/buttonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.12"
            android:onClick="btn2"
            android:text="@string/button4" />

        <Button
            android:id="@+id/btn3"
            style="@style/buttonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.12"
            android:onClick="btn3"
            android:text="@string/button5" />

        <Button
            android:id="@+id/btn4"
            style="@style/buttonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.12"
            android:onClick="btn4"
            android:text="@string/button6" />

        <Button
            android:id="@+id/btn5"
            style="@style/buttonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.12"
            android:onClick="btn5"
            android:text="@string/button7" />

        <Button
            android:id="@+id/btn6"
            style="@style/buttonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.12"
            android:onClick="btn6"
            android:text="@string/button8" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
