<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.student.health.B5">

    <LinearLayout
        android:layout_width="344dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        android:weightSum="1"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView27"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button7"
            style="@style/titleName"/>

        <TextView
            android:id="@+id/textView28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="請選擇您的性別"
            style="@style/dsName"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/d1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="男性"
                style="@style/radioName"/>

            <RadioButton
                android:id="@+id/d2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="女性"
                style="@style/radioName"/>

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="身高(cm)"
                style="@style/dsName"/>

            <TextView
                android:id="@+id/textView30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="體重(kg)"
                style="@style/dsName"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:orientation="horizontal"
            >

            <EditText
                android:id="@+id/height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
                style="@style/keyName"/>

            <EditText
                android:id="@+id/weight3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
                style="@style/keyName"/>

        </LinearLayout>

        <TextView
            android:id="@+id/textView32"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.04"
            android:text="體脂率(%):體脂為21%請輸入21"
            style="@style/dsName"/>

        <EditText
            android:id="@+id/fat2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            style="@style/keyName"/>

        <Button
            android:id="@+id/ok5"
            style="@style/buttonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="ok5"
            android:text="@string/buttonD" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView34"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="FFMI"
                style="@style/resultName"/>

            <EditText
                android:id="@+id/ffmi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.70"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
                style="@style/ansName"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="診算結果"
                style="@style/resultName"/>

            <EditText
                android:id="@+id/result5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
                style="@style/ansName"/>
        </LinearLayout>

        <Button
            android:id="@+id/home5"
            style="@style/buttonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="home5"
            android:text="@string/buttonH" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
