<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.student.health.B6">

    <LinearLayout
        android:layout_width="344dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView31"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button8"
            style="@style/titleName"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView35"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:text="性別："
                style="@style/dsName"/>

            <RadioButton
                android:id="@+id/e1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="男性"
                style="@style/radioName"/>

            <RadioButton
                android:id="@+id/e2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="女性"
                style="@style/radioName"/>
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView36"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="身高(cm)"
                style="@style/dsName"/>

            <TextView
                android:id="@+id/textView37"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="體重(kg)"
                style="@style/dsName"/>

            <TextView
                android:id="@+id/textView38"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="年齡"
                style="@style/dsName"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/height2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
                style="@style/keyName"/>

            <EditText
                android:id="@+id/weight4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
                style="@style/keyName"/>

            <EditText
                android:id="@+id/age2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
                style="@style/keyName"/>
        </LinearLayout>

        <TextView
            android:id="@+id/textView39"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:text="選擇最符合您活動程度的描述"
            style="@style/dsName"/>

        <Spinner
            android:id="@+id/spn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/ok6"
            style="@style/buttonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="ok6"
            android:text="@string/buttonD" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView40"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="BMR"
                style="@style/resultName"/>

            <EditText
                android:id="@+id/bmr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
                style="@style/ansName"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView40"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TEDD"
                style="@style/resultName"/>

            <EditText
                android:id="@+id/tedd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
                style="@style/ansName"/>

        </LinearLayout>

        <Button
            android:id="@+id/home6"
            style="@style/buttonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="home6"
            android:text="@string/buttonH" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
